--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,47 @@
-.App {
+
+body {
+  background-color: rgb(50, 140, 180);
+}
+.wrapper {
+  margin: 40px;
+}
+
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: seashell;
+  font-size: 60px;
+  line-height: 100px;
   text-align: center;
+  border-radius: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  width: 100%;
+  height: 40px;
+  margin: 20px auto;
+  background-color: seashell;
+  border-radius: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  font-size: 25px;
+  line-height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item {
+  color: black;
+  margin: 0 30px;
+  text-align: center;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-item:hover {
+  font-size: 32px;
+}
+
+.card {
+  display: block;
+  width: 80%;
+  background-color: seashell;
+  margin: 20px 0;
 }
