improved styling on Nav Bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,11 +17,12 @@ body {
 }
 
 .navbar {
-  width: 100%;
+  width: 95%;
   height: 40px;
   margin: 20px auto;
   background-color: seashell;
-  border-radius: 20px;
+  border-radius: 10px;
+  border: 2px solid black;
   display: flex;
   justify-content: space-around;
   font-size: 25px;
@@ -47,4 +48,5 @@ body {
   border-radius: 8px;
   padding: 30px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  line-height: 40px;
 }
