--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,6 +40,11 @@ body {
   font-size: 32px;
 }
 
+.banner {
+  margin: 0 auto;
+  text-align: center;
+}
+
 .card {
   display: block;
   width: 90%;
@@ -49,4 +54,22 @@ body {
   padding: 30px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
   line-height: 40px;
+}
+
+.comment-sheet {
+  display: block;
+  width: 90%;
+  background-color: seashell;
+  margin: 20px auto;
+  padding: 30px;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  line-height: 40px;
+
+}
+
+.comment {
+  display: block;
+  margin-top: 30px;
+  padding-top: 30px;
+  border-top: 1px solid lightgray;
 }
